# light_alarm

./: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .gitignore  Dockerfile  README.md  alarms.json  backend.py  backend_test.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  alarm.py
backend/app/routes/: __init__.py  alarm_api.py  api.py  time_api.py
backend/app/storage/: __init__.py  filestorage.py
embedded/: .gitignore  Cargo.toml  README.md  folder_structure.md  go.mod  plan.md  spec.md
embedded/.cargo/: config.toml
embedded/src/: main.go  main.py  main.rs
embedded/src/alarm/: errors.go  intensity.go  intensity.py  manager.go  manager.py  model.rs  scheduler.go  scheduler.py  types.go  types.py
embedded/src/config/: constants.go  constants.py
embedded/src/hardware/: button.go  button.py  buzzer.go  buzzer.py  led.go  led.py
embedded/src/http/: client.go  client.py
embedded/src/log/: log.go  log.py
embedded/src/logging/: mod.rs  usb.rs
embedded/src/machine/: pin.go
embedded/src/net/: config.rs  mod.rs  net.rs  net_logic.rs
embedded/src/time_lib/: mod.rs  model.rs  time.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: config.ts  index.css
frontend/src/components/: AlarmHeader.tsx  AlarmLengthSelector.tsx  AlarmList.tsx  ColorPicker.tsx  IntensityCurveSelector.tsx  TimePicker.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: useAlarms.tsx
frontend/src/pages/: Index.tsx  NotFound.tsx
frontend/src/services/: alarmService.ts
frontend/src/types/: alarm.ts
scripts/: build-frontend.sh  deploy.sh  restart.sh  stop.sh
src/: App.tsx  config.ts  consts.ts  index.css
src/components/: AlarmForm.tsx  AlarmList.tsx  ColorPicker.tsx  IntensityCurveSelector.tsx  RecurrenceSelector.tsx  TimePicker.tsx
src/components/ui/: calendar.tsx  sonner.tsx
src/hooks/: use-mobile.ts  use-toast.ts  useAlarmMutations.tsx  useAlarms.tsx
src/pages/: Index.tsx
src/services/: alarmService.ts
src/types/: alarm.ts
