[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m", 
    "defmt", 
    "executor-thread"
] }
embassy-rp = { version = "0.6.0", features = ["critical-section-impl", "defmt", "rp2040", "time-driver"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "1.0.0", features = ["defmt", "print-defmt"] }
