[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
cyw43 = { version = "0.4.0"}#, features = ["log"] } #, features = ["defmt"] }
cyw43-pio = { version = "0.6.0" } #, features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    # "defmt",
    "executor-thread",
] }
embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "proto-ipv4",
    "tcp",
    "dns",
    # "defmt",
] }
embassy-usb = { version = "0.5.0" } #, features = ["defmt"] }
embassy-rp = { version = "0.7.0", features = [
    "critical-section-impl",
    # "defmt",
    "rp2040",
    "time-driver",
] }
embassy-time = { version = "0.4.0" } #, features = ["defmt"] }
panic-probe = { version = "1.0.0" } #, features = ["defmt", "print-defmt"] }
reqwless = { version = "0.13.0" } #, features = ["defmt"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0" } #, features = ["defmt"] }
static_cell = "2.1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-sync = { version = "0.7.0" } #, features = ["defmt"] }
heapless = { version = "0.8.0" } #, features = ["defmt-03"] }
embassy-futures = { version = "0.1.1" } #, features = ["defmt"] }
time = { version = "0.3.41", default-features = false }
# defmt-rtt = "1.0.0"
embassy-usb-logger = "0.5.0"
log = "0.4.27"
cortex-m = "0.7.7"
